--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "inside-public",
+  "name": "gameSource-public",
   "author": "Roman Potashow",
-  "version": "0.0.1-SNAPSHOT",
+  "version": "1.0.0-SNAPSHOT",
   "homepage": "https://github.com/justgook/inside-public",
   "description": "CMS system for remote editing and analysing",
   "license": "MIT",
@@ -18,9 +18,7 @@
   },
   "dependencies": {
     "brunch": ">= 1.0 < 1.8",
-    "connect": "2.12.0",
     "bower": "1.2.8",
-
     "javascript-brunch": ">= 1.0 < 1.8",
     "css-brunch": ">= 1.0 < 1.8",
     "uglify-js-brunch": ">= 1.0 < 1.8",
