--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
     "update": "bower update"
   },
   "dependencies": {
+    "cucumber": "0.3.1",
+    "zombie": "~2.0",
+    "nedb": "~0.8.12",
+    "q": "~0.9.7",
+    "winston": "~0.7.2",
+    "engine.io": "~0.7.12"
+
+  },
+  "devDependencies": {
     "brunch": ">= 1.0 < 1.8",
     "bower": "1.2.8",
     "javascript-brunch": ">= 1.0 < 1.8",
@@ -27,14 +36,8 @@
     "stylus-brunch": ">= 1.0 < 1.8",
     "jade-brunch": ">= 1.0 < 1.8",
     "static-jade-brunch": ">= 1.0 < 1.8",
-    "auto-reload-brunch": ">= 1.0 < 1.8"
-  },
-  "devDependencies": {
-    "cucumber": "0.3.1",
-    "zombie": "~2.0",
-    "nedb": "~0.8.12",
-    "q": "~0.9.7",
-    "winston": "~0.7.2",
-    "engine.io": "~0.7.12"
+    "auto-reload-brunch": ">= 1.0 < 1.8",
+    "connect": "~2.12.0",
+    "send": "~0.1.4"
   }
 }
