--- a/package.json
+++ b/package.json
@@ -18,12 +18,7 @@
   },
   "dependencies": {
     "cucumber": "0.3.1",
-    "zombie": "~2.0",
-    "nedb": "~0.8.12",
-    "q": "~0.9.7",
-    "winston": "~0.7.2",
-    "engine.io": "~0.7.12"
-
+    "zombie": "~2.0"
   },
   "devDependencies": {
     "brunch": ">= 1.0 < 1.8",
@@ -38,6 +33,11 @@
     "static-jade-brunch": ">= 1.0 < 1.8",
     "auto-reload-brunch": ">= 1.0 < 1.8",
     "connect": "~2.12.0",
-    "send": "~0.1.4"
+    "send": "~0.1.4",
+    "engine.io": "~0.7.12",
+    "es6-promise": "~0.1.1",
+    "i18n-2": "~0.4.5",
+    "nedb": "~0.8.12",
+    "winston": "~0.7.2"
   }
 }
