--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "update": "bower update"
   },
   "dependencies": {
-    "cucumber": "0.3.1",
+        "cucumber": "0.3.3",
+
     "es6-promise": "~0.1.1",
     "engine.io-client": "~0.8.0",
     "chai": "~1.8.1"
@@ -34,11 +35,10 @@
     "jade-brunch": ">= 1.0 < 1.8",
     "static-jade-brunch": ">= 1.0 < 1.8",
     "auto-reload-brunch": ">= 1.0 < 1.8",
+
     "connect": "~2.12.0",
     "send": "~0.1.4",
     "engine.io": "~0.7.12",
-    "i18n-2": "~0.4.5",
-    "nedb": "~0.8.12",
-    "winston": "~0.7.2"
+    "nedb": "~0.8.12"
   }
 }
