--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "dependencies": {
     "cucumber": "0.3.3",
-    "es6-promise": "~0.1.1",
-    "engine.io-client": "~0.8.0",
-    "chai": "~1.8.1"
+    "es6-promise": "0.1.1",
+    "engine.io-client": "0.8.0",
+    "chai": "1.8.1"
   },
   "devDependencies": {
     "brunch": ">= 1.0 < 1.8",
@@ -39,10 +39,10 @@
     "jade-brunch": ">= 1.0 < 1.8",
     "static-jade-brunch": ">= 1.0 < 1.8",
     "auto-reload-brunch": ">= 1.0 < 1.8",
-    "connect": "~2.12.0",
-    "send": "~0.1.4",
-    "engine.io": "~0.7.12",
-    "nedb": "~0.8.12",
-    "chance": "~0.5.4"
+    "connect": "2.12.0",
+    "send": "0.1.4",
+    "engine.io": "0.7.12",
+    "nedb": "0.10",
+    "chance": "0.5.4"
   }
 }
